tests/example_pods_w_same_owner_and_labels_gap_with_bad_match_expression/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: use_common_labels_same_values
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - key: app
          operator: In
          values:
          - query-selector
    ports:
    - port: 90
      protocol: TCP

---
